# kde-gerber-thumbnailer

./: .gitignore  CMakeLists.txt  README.md
src/: gerberthumbcreator.cpp  gerberthumbcreator.desktop  gerberthumbcreator.h
